--- a/paisajes.html
+++ b/paisajes.html
@@ -17,7 +17,7 @@
     <div class="inicio">
       <!--Encbezado de la pagina-->
       <header id="encabezado">
-        <h1 >Comenzando con los Retratos</h1>
+        <h1 >Paisajes</h1>
         <!--Menu de navegacion alieado a la derecha via CSS-->
         <nav id="menu">
             <ul>
@@ -29,25 +29,39 @@
       </header>
 
       <!--Cuerpo o contenido de la pagina web-->
-      <div class="contenido">
-        <div id="imgprincipal">
+      <div class="paisajes">
+        <div class="paiimage1">
+        <figure>
+          <img id="pai1" src="imagenes/imagen2.jpg" alt="Imangen 1" >
+        </figure>
+        </div>
+        <div class="paiimage2">
           <figure>
-            <img id="img1" src="imagenes/imagen1.jpg" alt="Imangen Principal" >
+            <img id="pai2" src="imagenes/imagen2.jpg" alt="Imagen 2" >
           </figure>
         </div>
-        <div id="imgsecundaria">
-          <div class="image2">
-            <figure>
-              <img id="img2" src="imagenes/imagen2.jpg" alt="Imagen 2" width="90%">
-              <figcaption><a href="paisajes.html">Paisajes</a></figcaption>
-            </figure>
-          </div>
-          <div class="image3">
-            <figure>
-              <img id="img3" src="imagenes/imagen3.jpg" alt="Imagen 3" width="90%">
-              <figcaption><a href="retratos.html">Retratos</a></figcaption>
-            </figure>
-          </div>
+        <div class="paiimage3">
+          <figure>
+            <img id="pai3" src="imagenes/imagen2.jpg" alt="Imagen 3" >
+          </figure>
+        </div>
+      </div>
+
+      <div class="paisajes">
+        <div class="paiimage4">
+        <figure>
+          <img id="pai4" src="imagenes/imagen2.jpg" alt="Imangen 1" >
+        </figure>
+        </div>
+        <div class="paiimage5">
+          <figure>
+            <img id="pai5" src="imagenes/imagen2.jpg" alt="Imagen 2" >
+          </figure>
+        </div>
+        <div class="paiimage6">
+          <figure>
+            <img id="pai6" src="imagenes/imagen2.jpg" alt="Imagen 3" >
+          </figure>
         </div>
       </div>
 
